Adds readme file, content and styling for portfolio and contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container nav-container">
             <div class="col-12 col-lg-6 logo-container">
-                <a href="#" class="navbar-brand logo">Mike Mastromatteo</a>
+                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
             </div>
             <div class="col-12 col-lg-6">
                 <ul class="navbar-nav right-align">
@@ -33,51 +33,38 @@
         </div>
     </nav>
 
-    <main>
+    <main class="content-area">
         <div class="container">
-            <div class="card-deck">
-                <div class="card col-6">
-                  <img src="assets/furniture-platform.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card col-6">
-                <img src="assets/game-art.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-            </div>
-            <div class="card-deck">
-                  <div class="card col-6">
-                  <img src="assets/gym-platform.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card col-6">
-                    <img src="assets/SillyStyle.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="col-12 col-lg-8">
+                <div class="jumbotron jumbo-container">
+                    <h2 class="content-title">Portfolio</h2>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="/assets/game-art.png" alt="Picture of a pixel art sky" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Game Art</h5>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="/assets/furniture-platform.png" alt="Screenshot of the home page of a furniture website" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Furniture Website</h5>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="card-deck">
-                <div class="card col-6">
-                    <img src="assets/titlescreen.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="/assets/gym-platform.png" alt="Screenshot of the home page of a gym website" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Gym Website</h5>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="/assets/SillyStyle.png" alt="The text sillystyle" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Custom Styles</h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,7 +72,7 @@
     </main>
 
     <footer class="footer-area">
-        <p>Copyright</p>
+        <p>© Copyright</p>
     </footer>
 </body>
 </html>
