--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container nav-container">
             <div class="col-12 col-lg-6 logo-container">
-                <a href="#" class="navbar-brand logo">Mike Mastromatteo</a>
+                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
             </div>
             <div class="col-12 col-lg-6">
                 <ul class="navbar-nav right-align">
@@ -33,9 +33,37 @@
         </div>
     </nav>
 
+    <main class="content-area">
+        <div class="container">
+            <div class="col-12 col-lg-8">
+                <div class="jumbotron jumbo-container">
+                    <h2 class="content-title">Contact</h2>
+                    <div class="contact-field">
+                        <h4 class="contact-title">Name</h4>
+                        <div class="input-group mb-3">   
+                            <input type="text" class="form-control" placeholder="John Smith" aria-label="Name">
+                        </div>
+                    </div>
+                    <div class="contact-field">
+                        <h4 class="contact-title">Email</h4>
+                        <div class="input-group mb-3">   
+                            <input type="text" class="form-control" placeholder="example@gmail.com" aria-label="Email">
+                        </div>
+                    </div>
+                    <div class="contact-field">
+                        <h4 class="contact-title">Message</h4>
+                        <div class="input-group mb-3">   
+                            <textarea class="form-control contact-textarea" aria-label="Message"></textarea>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary contact-btn">Submit</button>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer class="footer-area">
-        <p>Copyright</p>
+        <p>© Copyright</p>
     </footer>
 </body>
 </html>
