--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container nav-container">
             <div class="col-12 col-lg-6 logo-container">
-                <a href="#" class="navbar-brand logo">Mike Mastromatteo</a>
+                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
             </div>
             <div class="col-12 col-lg-6">
                 <ul class="navbar-nav right-align">
@@ -33,21 +33,26 @@
         </div>
     </nav>
 
-    <main class="about-area">
+    <main class="content-area">
         <div class="container">
             <div class="col-12 col-lg-8">
-                <div class="jumbotron">
-                    <h1 class="about-title">About Me</h1>
-                    <img src="assets/me.jpg" alt="A picture of me" class="about-picture">
-                    <p class="about-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, quibusdam facilis laborum fuga ex, vel delectus voluptate blanditiis hic minima dignissimos at inventore autem non dolorum, exercitationem consectetur nam asperiores? ipsum dolor sit amet consectetur adip isicing elit.</p>
-                    <p class="about-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, quibusdam facilis laborum fuga ex, vel delectus voluptate blanditiis hic minima dignissimos at inventore autem non dolorum, exercitationem consectetur nam asperiores? ipsum dolor sit amet consectetur adip isicing elit.</p>
+                <div class="jumbotron jumbo-container">
+                    <h2 class="content-title">About Me</h2>
+                    <div class="about-content-container">
+                        <img src="assets/me.jpg" alt="A picture of me" class="about-picture">
+                        <div class="about-paragraph-container">
+                            <p>Hi, my name is Mike Mastromatteo. I'm an aspiring web developer and a big fan of art and design. My favorite color is orange and I really enjoy modern slick design with a focus on pleasing animations and site construction that just makes sense. The orange fruit is pretty tasty too but I believe a nice grapefruit is a superior choice.</p>
+                            <p>I received my undergrad degree from Marist College in 2017 and since then I've worked on art for a few small games and a few designs for some websites. I try to pay close attention when I'm out and about in the world at modern design choices in shops, digital ads, and posters as well as when I'm inside browsing the web looking for inspiration on innovative websites.</p>
+                            <p>If you are interested in working with me please let me know in the contact form. I would love to hear about your design vision and work with you closely on your project.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
     <footer class="footer-area">
-        <p>Copyright</p>
+        <p>© Copyright</p>
     </footer>
 </body>
 </html>
