Adds float to about image and html semantic tags

--- a/index.html
+++ b/index.html
@@ -36,17 +36,15 @@
     <main class="content-area">
         <div class="container">
             <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
+                <section class="jumbotron jumbo-container">
                     <h2 class="content-title">About Me</h2>
-                    <div class="about-content-container">
-                        <img src="assets/me.jpg" alt="A picture of me" class="about-picture">
-                        <div class="about-paragraph-container">
-                            <p>Hi, my name is Mike Mastromatteo. I'm an aspiring web developer and a big fan of art and design. My favorite color is orange and I really enjoy modern slick design with a focus on pleasing animations and site construction that just makes sense. The orange fruit is pretty tasty too but I believe a nice grapefruit is a superior choice.</p>
-                            <p>I received my undergrad degree from Marist College in 2017 and since then I've worked on art for a few small games and a few designs for some websites. I try to pay close attention when I'm out and about in the world at modern design choices in shops, digital ads, and posters as well as when I'm inside browsing the web looking for inspiration on innovative websites.</p>
-                            <p>If you are interested in working with me please let me know in the contact form. I would love to hear about your design vision and work with you closely on your project.</p>
-                        </div>
-                    </div>
-                </div>
+                    <img src="assets/me.jpg" alt="A picture of me" class="about-picture">
+                    <article class="about-paragraph-container">
+                        <p>Hi, my name is Mike Mastromatteo. I'm an aspiring web developer and a big fan of art and design. My favorite color is orange and I really enjoy modern slick design with a focus on pleasing animations and site construction that just makes sense. The orange fruit is pretty tasty too but I believe a nice grapefruit is a superior choice.</p>
+                        <p>I received my undergrad degree from Marist College in 2017 and since then I've worked on art for a few small games and a few designs for some websites. I try to pay close attention when I'm out and about in the world at modern design choices in shops, digital ads, and posters as well as when I'm inside browsing the web looking for inspiration on innovative websites.</p>
+                        <p>If you are interested in working with me please let me know in the contact form. I would love to hear about your design vision and work with you closely on your project.</p>
+                    </article>
+                </section>
             </div>
         </div>
     </main>
