--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
     <main class="content-area">
         <div class="container">
             <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
+                <section class="jumbotron jumbo-container">
                     <h2 class="content-title">Portfolio</h2>
-                    <div class="card-deck">
+                    <article class="card-deck">
                         <div class="card">
                             <img src="/assets/game-art.png" alt="Picture of a pixel art sky" class="card-img-top">
                             <div class="card-body">
@@ -51,8 +51,8 @@
                                 <h5 class="card-title">Furniture Website</h5>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-deck">
+                    </article>
+                    <article class="card-deck">
                         <div class="card">
                             <img src="/assets/gym-platform.png" alt="Screenshot of the home page of a gym website" class="card-img-top">
                             <div class="card-body">
@@ -65,8 +65,8 @@
                                 <h5 class="card-title">Custom Styles</h5>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </article>
+                </section>
             </div>
         </div>
     </main>
