--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <main class="content-area">
         <div class="container">
             <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
+                <section class="jumbotron jumbo-container">
                     <h2 class="content-title">Contact</h2>
                     <div class="contact-field">
                         <h4 class="contact-title">Name</h4>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-primary contact-btn">Submit</button>
-                </div>
+                </section>
             </div>
         </div>
     </main>
