Adds updated portfolio files

--- a/contact.html
+++ b/contact.html
@@ -3,30 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Welcome to my Portfolio | Mike Mastromatteo</title>
 
-    <!-- Boostrap -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/f17b5acda2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container nav-container">
-            <div class="col-12 col-lg-6 logo-container">
-                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
-            </div>
-            <div class="col-12 col-lg-6">
-                <ul class="navbar-nav right-align">
-                    <li class="nav-item active">
-                        <a href="index.html" class="nav-link">About</a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#"><span class="brand-m">M</span><span class="brand-i">i</span><span class="brand-k">k</span><span class="brand-e">e</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -35,8 +39,7 @@
 
     <main class="content-area">
         <div class="container">
-            <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
+            <div class="col-12 col-lg-12">
                     <h2 class="content-title">Contact</h2>
                     <div class="contact-field">
                         <h4 class="contact-title">Name</h4>
@@ -57,13 +60,12 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-primary contact-btn">Submit</button>
-                </div>
             </div>
         </div>
     </main>
-
-    <footer class="footer-area">
-        <p>© Copyright</p>
-    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
