--- a/index.html
+++ b/index.html
@@ -3,56 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Welcome to my Portfolio | Mike Mastromatteo</title>
 
-    <!-- Boostrap -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/f17b5acda2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container nav-container">
-            <div class="col-12 col-lg-6 logo-container">
-                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
-            </div>
-            <div class="col-12 col-lg-6">
-                <ul class="navbar-nav right-align">
-                    <li class="nav-item active">
-                        <a href="index.html" class="nav-link">About</a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#"><span class="brand-m">M</span><span class="brand-i">i</span><span class="brand-k">k</span><span class="brand-e">e</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <main class="content-area">
-        <div class="container">
-            <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
-                    <h2 class="content-title">About Me</h2>
-                    <div class="about-content-container">
-                        <img src="assets/me.jpg" alt="A picture of me" class="about-picture">
-                        <div class="about-paragraph-container">
-                            <p>Hi, my name is Mike Mastromatteo. I'm an aspiring web developer and a big fan of art and design. My favorite color is orange and I really enjoy modern slick design with a focus on pleasing animations and site construction that just makes sense. The orange fruit is pretty tasty too but I believe a nice grapefruit is a superior choice.</p>
-                            <p>I received my undergrad degree from Marist College in 2017 and since then I've worked on art for a few small games and a few designs for some websites. I try to pay close attention when I'm out and about in the world at modern design choices in shops, digital ads, and posters as well as when I'm inside browsing the web looking for inspiration on innovative websites.</p>
-                            <p>If you are interested in working with me please let me know in the contact form. I would love to hear about your design vision and work with you closely on your project.</p>
+      
+    <main class="site-main">
+        <div class="home-hero" id="vanta-area">
+            <div class="home-hero-container container">
+                <div class="row">
+                    <section class="home-hero-headline-box">
+                        <div class="home-hero-headline">
+                            <p class="home-hero-intro">Hello, my name is</p>
+                            <h2 class="home-hero-title">Mike Mastromatteo</h2>
+                            <p class="home-hero-subtitle" id="home-hero-subtitle">Web Developer / Game Developer</p>
+                            <ul class="home-hero-socials list-group list-group-horizontal">
+                                <li class="list-group-item"><i class="fab fa-github"></i></li>
+                                <li class="list-group-item"><i class="fab fa-linkedin-in"></i></li>
+                                <li class="list-group-item"><i class="fab fa-twitter"></i></li>
+                            </ul>
+                            <button type="button" class="home-hero-btn btn btn-dark" id="portfolio-btn">View my Portfolio</button>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
         </div>
+
+        <div class="portfolio-area">
+            
+        </div>
     </main>
 
-    <footer class="footer-area">
-        <p>© Copyright</p>
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="three.r95.min.js"></script>
+    <script src="vanta.net.min.js"></script>
+    <script src="script.js"></script>
+    <script>
+    const colorHtml = 0xf06529;
+    const colorCss = 0x2965f1;
+    const colorJs = 0xf0db4f;
+    const colorScss = 0xcc6699;
+
+    const colorOptions = [colorHtml, colorCss, colorJs, colorScss];
+    const colorHexOptions = ['#f06529', '#2965f1', '#f0db4f', '#cc6699'];
+
+    const portfolioBtn = document.getElementById('portfolio-btn');
+    const heroSubtitle = document.getElementById('home-hero-subtitle');
+
+    const effect = VANTA.NET({
+        el: "#vanta-area",
+        mouseControls: true,
+        touchControls: true,
+        minHeight: 400.00,
+        minWidth: 400.00,
+        scale: 1.00,
+        scaleMobile: 1.00,
+        backgroundColor: 0x0D1317,
+        color: 0x2965f1,
+        maxDistance: 20.00,
+        showDots: false //Find a way to make this work
+    });
+
+    setInterval(() => {
+        let colorChoice = Math.floor(Math.random() * colorOptions.length);
+        effect.setOptions({
+            color: colorOptions[colorChoice]
+        })
+        portfolioBtn.style.borderColor = colorHexOptions[colorChoice];
+        heroSubtitle.style.borderColor = colorHexOptions[colorChoice];
+
+    }, 5000);
+
+</script>
 </body>
 </html>
