--- a/portfolio.html
+++ b/portfolio.html
@@ -3,30 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Welcome to my Portfolio | Mike Mastromatteo</title>
 
-    <!-- Boostrap -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/f17b5acda2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container nav-container">
-            <div class="col-12 col-lg-6 logo-container">
-                <a href="index.html" class="navbar-brand logo">Mike Mastromatteo</a>
-            </div>
-            <div class="col-12 col-lg-6">
-                <ul class="navbar-nav right-align">
-                    <li class="nav-item active">
-                        <a href="index.html" class="nav-link">About</a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#"><span class="brand-m">M</span><span class="brand-i">i</span><span class="brand-k">k</span><span class="brand-e">e</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -35,44 +39,37 @@
 
     <main class="content-area">
         <div class="container">
-            <div class="col-12 col-lg-8">
-                <div class="jumbotron jumbo-container">
+            <div class="row">
+                <div class="col-4">
                     <h2 class="content-title">Portfolio</h2>
+                </div>
+                <div class="col-=8">
                     <div class="card-deck">
-                        <div class="card">
-                            <img src="/assets/game-art.png" alt="Picture of a pixel art sky" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Game Art</h5>
+                        <a href="https://mikemastro13.github.io/project-1-columbia/">
+                            <div class="card portfolio-card">
+                                <img src="/assets/img/yesreply.png" alt="Screenshot of yesreply site" class="portfolio-card-img card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">yesreply</h5>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card">
-                            <img src="/assets/furniture-platform.png" alt="Screenshot of the home page of a furniture website" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Furniture Website</h5>
+                        </a>
+                        <a href="https://mikemastro13.github.io/password-generator/">
+                            <div class="card portfolio-card">
+                                <img src="/assets/img/passwordgenerator.png" alt="Screenshot password generator site" class="portfolio-card-img card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">Password Generator</h5>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="card-deck">
-                        <div class="card">
-                            <img src="/assets/gym-platform.png" alt="Screenshot of the home page of a gym website" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Gym Website</h5>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="/assets/SillyStyle.png" alt="The text sillystyle" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Custom Styles</h5>
-                            </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer class="footer-area">
-        <p>© Copyright</p>
-    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
