--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     const portfolioBtn = document.getElementById('portfolio-btn');
     const heroSubtitle = document.getElementById('home-hero-subtitle');
 
+    // Vanta Effects
     const effect = VANTA.NET({
         el: "#vanta-area",
         mouseControls: true,
