--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     const portfolioBtn = document.getElementById('portfolio-btn');
     const heroSubtitle = document.getElementById('home-hero-subtitle');
 
-    // Vanta Effects
+    // Vanta Effectszz
     const effect = VANTA.NET({
         el: "#vanta-area",
         mouseControls: true,
