Adds content to links and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                     <div class="card-deck">
                         <a href="https://mikemastro13.github.io/project-1-columbia/">
                             <div class="card portfolio-card">
-                                <img src="/assets/img/yesreply.png" alt="Screenshot of yesreply site" class="portfolio-card-img card-img-top">
+                                <img src="assets/img/yesreply.png" alt="Screenshot of yesreply site" class="portfolio-card-img card-img-top">
                                 <div class="card-body">
                                     <h5 class="card-title">yesreply</h5>
                                 </div>
@@ -55,7 +55,7 @@
                         </a>
                         <a href="https://mikemastro13.github.io/password-generator/">
                             <div class="card portfolio-card">
-                                <img src="/assets/img/passwordgenerator.png" alt="Screenshot password generator site" class="portfolio-card-img card-img-top">
+                                <img src="assets/img/passwordgenerator.png" alt="Screenshot password generator site" class="portfolio-card-img card-img-top">
                                 <div class="card-body">
                                     <h5 class="card-title">Password Generator</h5>
                                 </div>
